# newlynewpipeline

./: README.md
ansible/: generic.yml  host  maven.yml  vault_pass
ansible/group_vars/: vault_generic  vault_generic_unencrypted  vault_maven
clearcase/: Jenkinsfile  README.md
devops-pipelines/resources/: pipelineStages.properties
devops-pipelines/vars/: archiveFilteredArtifacts.groovy  artifactDeployment.groovy  artifactManagement.groovy  bat.groovy  buildSourceCode.groovy  checkAgentExistence.groovy  codeCoverage.groovy  conditionalNode.groovy  constants.groovy  containerScan.groovy  createInstaller.groovy  dockerImageBuild.groovy  dockerImageManagement.groovy  dockerImagePush.groovy  dynamicApplicationSecurity.groovy  fpgaCompile.groovy  fpgaLint.groovy  fpgaVerifyCDC.groovy  functionalTest.groovy  jenkinsEnvironment.groovy  logger.groovy  mergeBranch.groovy  packageForDelivery.groovy  preBuildSourceCode.groovy  prePostProcessing.groovy  promoteArtifact.groovy  runPipeline.groovy  staticApplicationSecurity.groovy  staticCodeAnalysis.groovy  styleCheck.groovy  tagSourceCode.groovy  unitTest.groovy  utilMethods.groovy  validateParameter.groovy  when.groovy
docker/: .gitignore  Jenkinsfile  dockerProcessing.groovy  rebuildDockerImage
fpga/: README.md
fpga/quartus/: Jenkinsfile  SampleQuartus.qpf  SampleQuartus.qsf  SampleQuartus.sdc  SampleQuartus.tcl  fibonacci.vhd
fpga/vivado/: DocpfVivadoSample.tcl  DocpfVivadoSample.xpr  Jenkinsfile
jenkins_scripts/: JenkinsfileAutomateRelease  JenkinsfileMonitorAll  README.md  configJenkinsInstance.sh  jenkins_kubernetes_init.sh  manageDockerJenkinsInstance.sh
jenkins_scripts/init.groovy.d/: 0_initConfig.groovy  (+6 more)
make/: .gitignore  .gitmodules  CMakeLists.txt  CustomCPackConfig.cmake  CustomCPackSourceConfig.cmake  Jenkinsfile  JenkinsfileCMake  JenkinsfileDebian  Jenkinsfile_msbuild  PackageCopyright.txt  PackageReadMe.txt  README.md  myToolStage.groovy
make/installer/: control
make/packaging/: debpackage.yml  package.yml
make/resources/: debianStageData.properties  stageData.properties
make/src/: Addition.cpp  CMakeLists.txt  ExampleApp.cpp  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  Multiply.cpp
make/test/functional/: README.md  package-lock.json  package.json  test.js
make/test/functional/docs/: getting-started.md
make/test/src/: Addition_Test.cpp  CMakeLists.txt  HelloWorldTest.vcxproj  Makefile  packages.config  src.pro
make/vars/: prePostProcessing.groovy
maven/: Jenkinsfile  JenkinsfileGradle  README.md  build.gradle  pom.xml  settings.xml
msbuild/: HelloWorld.nuspec  Jenkinsfile  Jenkinsfile_Inside  README.md
puppet/: hiera.yaml  puppet.conf
qmake/: .gitignore  Jenkinsfile  Makefile  QMake.pro  README.md
sandbox/: README.md
setuptools/: .gitignore  Jenkinsfile  JenkinsfileArchiveArtifacts  JenkinsfileRelease  README.md  setup.py
sloc/: Jenkinsfile  README.md
test_pipelines/: Jenkinsfile
vxworks/: .cproject  .gitignore  .project  .wrmakefile  .wrproject  Jenkinsfile  Makefile  README.md  helloworld.c
(+65 files in other folders)
